arm32v7-karmabot/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karmabot-api-service
spec:
  selector:
    app: karmabot-api
  ports:
    - protocol: TCP
      port: 3000
