arm32v7-karmabot/templates/api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: karmabot-api-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: api.steve72.de
      http:
        paths:
          - path: /karma
            backend:
              serviceName: karmabot-api-service
              servicePort: 3000
